--- a/doc/man3/X509_STORE_CTX_get_error.pod
+++ b/doc/man3/X509_STORE_CTX_get_error.pod
@@ -103,6 +103,8 @@ the operation was successful.
 
 the issuer certificate of a locally looked up certificate could not be found.
 This normally means the list of trusted certificates is not complete.
+To enable using trusted self-issued but not self-signed certificates
+the B<X509_V_FLAG_PARTIAL_CHAIN> flag may be set.
 
 =item B<X509_V_ERR_UNABLE_TO_GET_CRL: unable to get certificate CRL>
 
@@ -168,15 +170,15 @@ the CRL nextUpdate field contains an invalid time.
 
 an error occurred trying to allocate memory. This should never happen.
 
-=item B<X509_V_ERR_DEPTH_ZERO_SELF_SIGNED_CERT: self signed certificate>
+=item B<X509_V_ERR_DEPTH_ZERO_SELF_SIGNED_CERT: self-signed certificate>
 
-the passed certificate is self signed and the same certificate cannot be found
+the passed certificate is self-signed and the same certificate cannot be found
 in the list of trusted certificates.
 
-=item B<X509_V_ERR_SELF_SIGNED_CERT_IN_CHAIN: self signed certificate in certificate chain>
+=item B<X509_V_ERR_SELF_SIGNED_CERT_IN_CHAIN: self-signed certificate in certificate chain>
 
 the certificate chain could be built up using the untrusted certificates but
-the root could not be found locally.
+the self-signed root could not be found trusted locally.
 
 =item B<X509_V_ERR_UNABLE_TO_GET_ISSUER_CERT_LOCALLY: unable to get local issuer certificate>
 
@@ -186,7 +188,8 @@ of an untrusted certificate cannot be found.
 =item B<X509_V_ERR_UNABLE_TO_VERIFY_LEAF_SIGNATURE: unable to verify the first certificate>
 
 no signatures could be verified because the chain contains only one certificate
-and it is not self signed.
+and it is not self-signed
+(nor self-issued in case the B<X509_V_FLAG_PARTIAL_CHAIN> flag is set).
 
 =item B<X509_V_ERR_CERT_CHAIN_TOO_LONG: certificate chain too long>
 
