fixup! fix confusions and obscure bugs in x509_vfy.c and v3_purp.c
fix doc-nit in doc/man3/X509_check_issued.pod

--- a/doc/man3/X509_check_issued.pod
+++ b/doc/man3/X509_check_issued.pod
@@ -2,8 +2,8 @@
 
 =head1 NAME
 
-X509_check_issued
- - checks if certificate is potentially issued by another certificate
+X509_check_issued - checks if certificate is potentially issued
+by another certificate
 
 =head1 SYNOPSIS
 
