--- a/doc/man3/X509_check_issued.pod
+++ b/doc/man3/X509_check_issued.pod
@@ -2,8 +2,8 @@
 
 =head1 NAME
 
-X509_check_issued - checks if certificate is potentially issued
-by another certificate
+X509_check_issued - checks if certificate is likely issued by another
+certificate
 
 =head1 SYNOPSIS
 
@@ -14,18 +14,18 @@ by another certificate
 
 =head1 DESCRIPTION
 
-X509_check_issued()) checks if certificate I<subject> was potentially issued
-using certificate I<issuer>. This function takes into account not only
-matching of issuer field of I<subject> with subject field of I<issuer>,
-but also compares B<authorityKeyIdentifier> extension of I<subject> with
-B<subjectKeyIdentifier> of I<issuer> if B<authorityKeyIdentifier>
-present in the I<subject> certificate.
-It does not check if the B<keyUsage> field of I<issuer> supports issuing
-I<subject> and does not perform the actual signature check.
+X509_check_issued() checks if certificate I<subject> was likely issued using CA
+certificate I<issuer>. This function takes into account not only
+matching of the issuer field of I<subject> with the subject field of I<issuer>,
+but also compares all sub-fields of the B<authorityKeyIdentifier> extension of
+I<subject>, as far as present, with the respective B<subjectKeyIdentifier>,
+serial number, and issuer fields of I<issuer>, as far as present. It also checks
+if the B<keyUsage> field (if present) of I<issuer> allows certificate signing.
+It does not actually check the certificate signature.
 
 =head1 RETURN VALUES
 
-The function returns B<X509_V_OK> if all checks pass
+X509_check_issued() returns B<X509_V_OK> if all checks are successful
 or some B<X509_V_ERR*> constant to indicate an error.
 
 =head1 SEE ALSO
@@ -36,7 +36,7 @@ L<openssl-verify(1)>
 
 =head1 COPYRIGHT
 
-Copyright 2015-2019 The OpenSSL Project Authors. All Rights Reserved.
+Copyright 2015-2018 The OpenSSL Project Authors. All Rights Reserved.
 
 Licensed under the Apache License 2.0 (the "License").  You may not use
 this file except in compliance with the License.  You can obtain a copy
